--- a/build.gradle
+++ b/build.gradle
@@ -1,2 +1,14 @@
-apply plugin: 'idea'
-apply plugin: 'java'
+plugins {
+    id 'java'
+}
+
+group 'org.alex'
+version '1.0'
+
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src']
+        }
+    }
+}
